# air_meter_server

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  air_meter_server.code-workspace  cross_deploy.sh  diesel.toml  pack_site.sh  project.TODO
.cargo/: config
migrations/2021-07-05-082201_create_readings/: down.sql  up.sql
src/: cli_client.rs  lib.rs  main.rs  relay_server.rs  sensor_client.rs  sensor_websocket.rs  ws_session.rs
src/sensor_client/: ccs811.rs  mod.rs  session_client.rs
testing/: cli_client.py
web_app/air_meter_client/: next.config.js  package-lock.json  package.json  tailwind.config.js
web_app/air_meter_client/lib/: API_ADDRESS.ts  WebSocket.ts
web_app/air_meter_client/lib/hooks/: useWebsockets.ts
web_app/air_meter_client/lib/state/: sensors.ts
web_app/air_meter_client/pages/: _app.tsx  index.tsx
web_app/air_meter_client/styles/: globals.css
