[package]
name = "air_meter_server"
version = "0.1.0"
edition = "2018"
default-run = "server"


[workspace]

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/cli_client.rs"

[dependencies]
library = { path = "library" }
actix = "0.10"
actix-codec = "0.3"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.3"
awc = "2"
env_logger = "0.8"
futures = "0.3.1"
bytes = "0.5.3"
dotenv = "0.15"
actix-cors = "0.5"
